# issue-cast-gd-pointer-crash-in-double-build

./: .gitignore  README.md
godot/: MainScene.tscn  node_3d.tscn  project.godot  rust.gdextension
rust/: Cargo.toml
rust/src/: lib.rs
