[package]
name = "issue_cast_gd_pointer_crash_in_double_build"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", features = ["experimental-wasm", "api-custom", "double-precision"] }
